fix: fix for background on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+.body-inner {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -8,5 +8,5 @@ body {
     background-image: url('./assets/img/pokedex-background.png');
     background-repeat: repeat;
     background-size: contain;
-    background-attachment: fixed
+    background-attachment: fixed;
 }
